# bazel-python-sample

./: .bazelrc  .gitignore  BUILD  README.md  WORKSPACE  requirements.txt
mysite/: BUILD.bazel
mysite/mysite/: BUILD.bazel  settings.py
mysite/polls/: BUILD.bazel
mysite/polls/migrations/: BUILD.bazel
