package(default_visibility = ["//visibility:public"])

load("@mysite_deps//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "py_default_library",
    srcs = [
        "__init__.py",
        "admin.py",
        "apps.py",
        "models.py",
        "tests.py",
        "urls.py",
        "views.py",
    ],
    deps = [
        "//mysite/polls/migrations:py_default_library",
        requirement("Django"),
    ],
)